--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "git+https://github.com/okrailbc/okrailbc-front-end.git"
   },
   "dependencies": {
+    "@bcgov/bc-sans": "^2.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -35,8 +36,10 @@
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
     "start-server-and-test": "^2.0.10",
-    "vite": "^6.2.0",
+    "vite": "^6.3.3",
     "vitest": "^3.0.8"
   },
   "engines": {
