--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@bcgov/bc-sans": "^2.1.0",
+    "unplugin-vue-markdown": "^28.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
