--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{js,ts,jsx,tsx,vue,cjs}": ["npm run pre-commit:lint"],
-  "*": ["npm run pre-commit:prettier"]
+  "*.{js,ts,jsx,tsx,vue,cjs}": ["eslint --no-warn-ignored"],
+  "*": ["prettier '!dist/**' --check --ignore-unknown"]
 }
